[package]
name = "cryptoBench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"

[[bench]]
name = "cryptoBench"
harness = false

[dependencies]
